introduced second level of web services
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6519 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webservices/Makefile.am
+++ b/simias/src/webservices/Makefile.am
@@ -1,11 +1,11 @@
 # handle Mono secondary dependencies
 export MONO_PATH := $(MONO_PATH)
 
-iFolderWebService_CSFILES = \
+iFolderWebServiceLocal_CSFILES = \
 	$(srcdir)/AssemblyInfo.cs \
-	$(srcdir)/iFolderCommon.cs \
-	$(srcdir)/iFolderAdmin.asmx.cs \
-	$(srcdir)/iFolderWeb.asmx.cs \
+	$(srcdir)/iFolderCommonLocal.cs \
+	$(srcdir)/iFolderAdminLocal.asmx.cs \
+	$(srcdir)/iFolderWebLocal.asmx.cs \
 	$(srcdir)/iFolder.cs \
 	$(srcdir)/iFolderDetails.cs \
 	$(srcdir)/iFolderType.cs \
@@ -36,26 +36,48 @@ iFolderWebService_CSFILES = \
 	$(srcdir)/LastSyncInfo.cs \
 	$(srcdir)/SyncServiceInfo.cs
 
-iFolderWebService_WEBFILES = \
-	$(srcdir)/iFolderAdmin.asmx \
-	$(srcdir)/iFolderWeb.asmx \
+iFolderWebServiceLocal_WEBFILES = \
+	$(srcdir)/iFolderAdminLocal.asmx \
+	$(srcdir)/iFolderWebLocal.asmx \
 	$(srcdir)/Download.ashx \
 	$(srcdir)/Upload.ashx
 	
+iFolderWebService_CSFILES = \
+	$(srcdir)/AssemblyInfo.cs \
+	$(srcdir)/iFolderAdmin.asmx.cs \
+	$(srcdir)/iFolderWeb.asmx.cs \
+	$(srcdir)/iFolderAdminLocalProxy.cs \
+	$(srcdir)/iFolderWebLocalProxy.cs
+
+iFolderWebService_WEBFILES = \
+	$(srcdir)/iFolderAdmin.asmx \
+	$(srcdir)/iFolderWeb.asmx
+	
+iFolderWebServiceLocal_CSFILES_CSC := $(subst /,$(SEP),$(iFolderWebServiceLocal_CSFILES))
+iFolderWebServiceLocal_INCLUDES =
+iFolderWebServiceLocal_RESOURCES =
+iFolderWebServiceLocal_FLAGS = $(CSC_LIBFLAG)
+if LINUX
+iFolderWebServiceLocal_LIBS = System.dll System.Data.dll $(SYSTEM_XML) System.Web.dll System.Web.Services.dll SimiasLib.dll SimiasClient.dll Simias.Server.dll
+else
+iFolderWebServiceLocal_LIBS = System.dll System.Data.dll $(SYSTEM_XML) System.Web.dll System.Web.Services.dll SimiasLib.dll SimiasClient.dll Simias.Server.dll log4net.dll
+endif
+iFolderWebServiceLocal_LIBPATH = $(LOG4NET_DIR) ../core/SimiasClient ../core/SimiasLib.dll ../server/Simias.Server
+
+GenerateWsdl_LIBS = System.dll System.Data.dll $(SYSTEM_XML) System.Web.dll System.Web.Services.dll
+
 iFolderWebService_CSFILES_CSC := $(subst /,$(SEP),$(iFolderWebService_CSFILES))
 iFolderWebService_INCLUDES =
 iFolderWebService_RESOURCES =
 iFolderWebService_FLAGS = $(CSC_LIBFLAG)
 if LINUX
-iFolderWebService_LIBS = System.dll System.Data.dll $(SYSTEM_XML) System.Web.dll System.Web.Services.dll SimiasLib.dll SimiasClient.dll Simias.Server.dll
+iFolderWebService_LIBS = System.dll System.Data.dll $(SYSTEM_XML) System.Web.dll System.Web.Services.dll SimiasLib.dll SimiasClient.dll Simias.Server.dll iFolder.WebService.Local.dll
 else
-iFolderWebService_LIBS = System.dll System.Data.dll $(SYSTEM_XML) System.Web.dll System.Web.Services.dll SimiasLib.dll SimiasClient.dll Simias.Server.dll log4net.dll
+iFolderWebService_LIBS = System.dll System.Data.dll $(SYSTEM_XML) System.Web.dll System.Web.Services.dll SimiasLib.dll SimiasClient.dll Simias.Server.dll iFolder.WebService.Local.dll log4net.dll
 endif
 iFolderWebService_LIBPATH = $(LOG4NET_DIR) ../core/SimiasClient ../core/SimiasLib.dll ../server/Simias.Server
 
-GenerateWsdl_LIBS = System.dll System.Data.dll $(SYSTEM_XML) System.Web.dll System.Web.Services.dll iFolder.WebService.dll
-
-EXTRA_DIST =  AssemblyInfo.cs.in $(iFolderWebService_WEBFILES) $(iFolderWebService_CSFILES)
+EXTRA_DIST =  AssemblyInfo.cs.in $(iFolderWebServiceLocal_WEBFILES) $(iFolderWebServiceLocal_CSFILES)
 
 if MAKE_DOC_FILE
 DOC_FILE = $(basename $@).doc.xml
@@ -63,9 +85,12 @@ DOC_FILE_CMD = /doc:$(DOC_FILE)
 DOC_FILE_CLEAN = *.doc.xml
 endif
 
-all: iFolder.WebService.dll GenerateWsdl.exe iFolderWeb.wsdl iFolderAdmin.wsdl
+all: iFolder.WebService.dll GenerateWsdl.exe iFolderAdmin.wsdl iFolderWeb.wsdl
 
-iFolder.WebService.dll: copy $(iFolderWebService_CSFILES) $(iFolderWebService_RESOURCES)
+iFolder.WebService.Local.dll: copy $(iFolderWebServiceLocal_CSFILES) $(iFolderWebServiceLocal_RESOURCES)
+	$(CSC) /out:$@ $(CSCFLAGS) $(iFolderWebServiceLocal_FLAGS) $(iFolderWebServiceLocal_LIBS:%=/r:%) $(iFolderWebServiceLocal_LIBPATH:%=/lib:%) $(LOG4NET_LIBS) $(iFolderWebServiceLocal_RESOURCES:%=$(ICON_FLAG)%) $(iFolderWebServiceLocal_CSFILES_CSC)
+
+iFolder.WebService.dll: iFolder.WebService.Local.dll $(iFolderWebService_CSFILES) $(iFolderWebService_RESOURCES)
 	$(CSC) /out:$@ $(CSCFLAGS) $(iFolderWebService_FLAGS) $(iFolderWebService_LIBS:%=/r:%) $(iFolderWebService_LIBPATH:%=/lib:%) $(LOG4NET_LIBS) $(iFolderWebService_RESOURCES:%=$(ICON_FLAG)%) $(iFolderWebService_CSFILES_CSC)
 
 GenerateWsdl.exe: GenerateWsdl.cs
@@ -76,6 +101,18 @@ copy:
 	cp ../core/SimiasLib.dll/SimiasLib.dll .
 	cp ../server/Simias.Server/Simias.Server.dll .
 
+iFolderWebLocalProxy.cs: iFolderWebLocal.wsdl
+	wsdl /nologo /namespace:iFolder.WebService.Web /out:$@ $<
+
+iFolderAdminLocalProxy.cs: iFolderAdminLocal.wsdl
+	wsdl /nologo /namespace:iFolder.WebService.Admin /out:$@ $<
+
+iFolderWebLocal.wsdl: copy iFolder.WebService.Local.dll GenerateWsdl.exe
+	$(MONO) GenerateWsdl.exe iFolder.WebService.Local.dll iFolder.WebService.iFolderWebLocal http://127.0.0.1:8086/simias10/iFolderWebLocal.asmx $@
+
+iFolderAdminLocal.wsdl: copy iFolder.WebService.Local.dll GenerateWsdl.exe
+	$(MONO) GenerateWsdl.exe iFolder.WebService.Local.dll iFolder.WebService.iFolderAdminLocal http://127.0.0.1:8086/simias10/iFolderAdminLocal.asmx $@
+
 iFolderWeb.wsdl: copy iFolder.WebService.dll GenerateWsdl.exe
 	$(MONO) GenerateWsdl.exe iFolder.WebService.dll iFolder.WebService.iFolderWeb http://127.0.0.1:8086/simias10/iFolderWeb.asmx $@
 
@@ -84,7 +121,7 @@ iFolderAdmin.wsdl: copy iFolder.WebService.dll GenerateWsdl.exe
 
 if DEBUG
 if WINDOWS
-DEBUG_FILES = iFolder.WebService.pdb
+DEBUG_FILES = iFolder.WebService.pdb iFolder.WebService.Local.pdb
 endif
 endif
 
@@ -92,16 +129,18 @@ install-exec-local: all $(DATA_FILES)
 	$(mkinstalldirs) $(DESTDIR)$(webdir)
 	$(mkinstalldirs) $(DESTDIR)$(webbindir)
 	$(mkinstalldirs) $(DESTDIR)$(sysconfdir)
+	$(INSTALL_PROGRAM) $(iFolderWebServiceLocal_WEBFILES) $(DESTDIR)$(webdir)
 	$(INSTALL_PROGRAM) $(iFolderWebService_WEBFILES) $(DESTDIR)$(webdir)
-	$(INSTALL_PROGRAM) iFolder.WebService.dll $(DEBUG_FILES) $(DESTDIR)$(webbindir)
+	$(INSTALL_PROGRAM) iFolder.WebService.dll iFolder.WebService.Local.dll $(DEBUG_FILES) $(DESTDIR)$(webbindir)
 	
 uninstall-local:
+	cd $(DESTDIR)$(webdir); rm -f $(iFolderWebServiceLocal_WEBFILES)
 	cd $(DESTDIR)$(webdir); rm -f $(iFolderWebService_WEBFILES)
-	cd $(DESTDIR)$(webbindir); rm -f iFolder.WebService.dll $(DEBUG_FILES)
+	cd $(DESTDIR)$(webbindir); rm -f iFolder.WebService.dll iFolder.WebService.Local.dll $(DEBUG_FILES)
 
 installcheck-local: install
 	
-CLEAN_FILES = iFolder.WebService.dll GenerateWsdl.exe iFolderWeb.wsdl iFolderAdmin.wsdl $(DOC_FILE_CLEAN) 
+CLEAN_FILES = iFolder.WebService.dll iFolder.WebService.Local.dll GenerateWsdl.exe *.wsdl $(DOC_FILE_CLEAN) 
 
 clean-local:
 	rm -rf $(CLEAN_FILES) $(COMMON_CLEAN_FILES) SimiasClient.dll SimiasLib.dll SimiasServer.dll
