Started implementation of server list and details.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6525 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/Admin.csproj
+++ b/simias/src/admin/Admin.csproj
@@ -509,6 +509,22 @@
                     BuildAction = "EmbeddedResource"
                 />
                 <File
+                    RelPath = "ServerDetails.aspx"
+                    SubType = "Form"
+                    BuildAction = "Content"
+                />
+                <File
+                    RelPath = "ServerDetails.aspx.cs"
+                    DependentUpon = "ServerDetails.aspx"
+                    SubType = "ASPXCodeBehind"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "ServerDetails.aspx.resx"
+                    DependentUpon = "ServerDetails.aspx.cs"
+                    BuildAction = "EmbeddedResource"
+                />
+                <File
                     RelPath = "Servers.aspx"
                     SubType = "Form"
                     BuildAction = "Content"
@@ -651,6 +667,10 @@
                 />
                 <File
                     RelPath = "css\Reports.css"
+                    BuildAction = "Content"
+                />
+                <File
+                    RelPath = "css\ServerDetails.css"
                     BuildAction = "Content"
                 />
                 <File
