Fixed bug in GetiFoldersByName.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6526 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webservices/iFolder.WebService.csproj
+++ b/simias/src/webservices/iFolder.WebService.csproj
@@ -110,7 +110,7 @@
                 <File
                     RelPath = "iFolderAdmin.asmx.cs"
                     DependentUpon = "iFolderAdmin.asmx"
-                    SubType = "Component"
+                    SubType = "Code"
                     BuildAction = "Compile"
                 />
                 <File
@@ -130,7 +130,7 @@
                 <File
                     RelPath = "iFolderWeb.asmx.cs"
                     DependentUpon = "iFolderWeb.asmx"
-                    SubType = "Component"
+                    SubType = "Code"
                     BuildAction = "Compile"
                 />
                 <File
