--- a/simias/src/server/Makefile.am
+++ b/simias/src/server/Makefile.am
@@ -13,33 +13,35 @@ DOC_FILE_CMD = /doc:$(DOC_FILE)
 DOC_FILE_CLEAN = *.doc.xml
 endif
 
+simias-server.cmd: $(srcdir)/simias-server.cmd.in
+	sed -e 's,@_webbindir_@,@webbindir@,g' -e 's,@_bindir_@,@bindir@,g' $< >$@
 
+simias-server: $(srcdir)/simias-server.in
+	sed -e 's,@_webbindir_@,@webbindir@,g' -e 's,@_bindir_@,@bindir@,g' $< >$@
 
-simiasserver: $(srcdir)/simiasserver.in
 if !WINDOWS
-	sed -e 's,@_webbindir_@,@webbindir@,g' -e 's,@_bindir_@,@bindir@,g' $< > $@
 	chmod +x $@
-endif		
+endif
 
-all: simiasserver
+all: simias-server.cmd simias-server
 
 install-exec-local: all
 	$(mkinstalldirs) $(DESTDIR)$(webbindir) $(DESTDIR)$(bootstrapdir) $(DESTDIR)$(bootstrapdir)/modules
 	$(INSTALL_PROGRAM) Simias.config $(DESTDIR)$(bootstrapdir)
 	$(INSTALL_PROGRAM) Simias.Server.conf $(DESTDIR)$(bootstrapdir)/modules
-if WINDOWS	
-	$(INSTALL_PROGRAM) simiasserver.cmd $(DESTDIR)$(bindir)
+if WINDOWS
+	$(INSTALL_PROGRAM) ./simias-server.cmd $(DESTDIR)$(bindir)
 else
-	$(INSTALL_PROGRAM) simiasserver $(DESTDIR)$(bindir)
+	$(INSTALL_PROGRAM) ./simias-server $(DESTDIR)$(bindir)
 endif	
 
 uninstall-local:
 	cd $(DESTDIR)$(bootstrapdir); rm -f Simias.config
 	cd $(DESTDIR)$(bootstrapdir)/modules; rm -f Simias.Server.conf
 if WINDOWS	
-	cd $(DESTDIR)$(bindir); rm -f simiasserver.cmd
+	cd $(DESTDIR)$(bindir); rm -f simias-server.cmd
 else
-	cd $(DESTDIR)$(bindir); rm -f simiasserver
+	cd $(DESTDIR)$(bindir); rm -f simias-server
 endif
 
 installcheck-local: install
@@ -51,12 +53,12 @@ CLEAN_FILES = $(DOC_FILE_CLEAN)
 
 clean-local:
 	rm -rf $(CLEAN_FILES) $(COMMON_CLEAN_FILES)
-	rm -rf simiasserver simiasserver.cmd
+	rm -rf simias-server simias-server.cmd
 
 #distclean-local:
 #	rm -rf $(COMMON_DISTCLEAN_FILES)
 
 maintainer-clean-local:
 	rm -rf $(COMMON_MAINTAINER_CLEAN_FILES)
-	rm -rf simiasserver simiasserver.cmd
+	rm -rf simias-server simias-server.cmd
 
