--- a/simias/configure.in
+++ b/simias/configure.in
@@ -582,6 +582,17 @@ AC_SUBST(XML2_LIBS)
 
 
 #
+# Configure MONO_WEBSERVER
+#
+MONO_WEBSERVER="no"
+if test -e "/usr/lib/mono/1.0/Mono.WebServer.dll"; then
+	MONO_WEBSERVER="yes"
+fi
+
+AC_SUBST(MONO_WEBSERVER)
+AM_CONDITIONAL(GACD_MONO_WEBSERVER, test "$MONO_WEBSERVER" = "yes")
+
+#
 # Try to locate the mod_mono.conf file so we can setup our conf files
 # to include it
 #
