--- a/simias/src/core/SimiasApp/Makefile.am
+++ b/simias/src/core/SimiasApp/Makefile.am
@@ -7,15 +7,20 @@ else
 SYSTEM_INSTALLER_LIB =
 endif
 
-Simias_CSFILES = $(srcdir)/AssemblyInfo.cs $(srcdir)/Simias.cs $(srcdir)/server.cs $(srcdir)/ApplicationServer.cs $(srcdir)/IApplicationHost.cs $(srcdir)/IWebSource.cs $(srcdir)/Tracing.cs $(srcdir)/XSPApplicationHost.cs $(srcdir)/BaseApplicationHost.cs $(srcdir)/BaseRequestBroker.cs $(srcdir)/MonoWorkerRequest.cs $(srcdir)/XSPWorkerRequest.cs $(srcdir)/LingeringNetworkStream.cs $(srcdir)/InitialWorkerRequest.cs $(srcdir)/SimiasAppInstallerClass.cs
+MONO_WEBSERVER_PATH = ../../../external/Mono.WebServer
+
+Simias_CSFILES = $(srcdir)/AssemblyInfo.cs \
+		$(srcdir)/Simias.cs \
+		$(srcdir)/SimiasAppInstallerClass.cs
+				
 Simias_CSFILES_CSC := $(subst /,$(SEP),$(Simias_CSFILES))
 Simias_INCLUDES =
 Simias_RESOURCES = $(srcdir)/App$(ICON_EXT)
 Simias_FLAGS = $(CSC_EXEFLAG)
-Simias_LIBS = System.dll System.Data.dll $(SYSTEM_XML) System.Web.dll $(SYSTEM_INSTALLER_LIB) SimiasClient.dll
-Simias_LIBPATH = ../SimiasClient
+Simias_LIBS = System.dll System.Data.dll $(SYSTEM_XML) System.Web.dll $(SYSTEM_INSTALLER_LIB) SimiasClient.dll Mono.WebServer.dll
+Simias_LIBPATH = ../SimiasClient $(MONO_WEBSERVER_PATH)
 
-EXTRA_DIST = App.ico $(Simias_CSFILES) AssemblyInfo.cs.in
+EXTRA_DIST = App.ico $(Simias_CSFILES) AssemblyInfo.cs.in $(srcdir)/simias.cmd $(srcdir)/simias.in
 
 if MAKE_DOC_FILE
 DOC_FILE = $(basename $@).doc.xml
@@ -31,8 +36,18 @@ endif
 
 all: Simias.exe
 
-Simias.exe: AssemblyInfo.cs $(Simias_CSFILES) $(Simias_RESOURCES)
+Simias.exe: AssemblyInfo.cs $(Simias_CSFILES) $(Simias_RESOURCES) simias
 	$(CSC) /out:$@ $(CSCFLAGS) $(Simias_FLAGS) $(SIMIAS_LIBS) $(Simias_LIBS:%=/r:%) $(Simias_LIBPATH:%=/lib:%) $(Simias_RESOURCES:%=$(ICON_FLAG)%) $(Simias_CSFILES_CSC) $(DOC_FILE_CMD)
+
+AssemblyInfo.cs: $(srcdir)/AssemblyInfo.cs.in 
+	sed -e 's,@_VERSION_@,@VERSION@,g' $< > $@
+	chmod +x $@
+
+simias: $(srcdir)/simias.in
+if !WINDOWS
+	sed -e 's,@_webbindir_@,@webbindir@,g' -e 's,@_bindir_@,@bindir@,g' $< > $@
+	chmod +x $@
+endif	
 
 if DEBUG
 if WINDOWS
@@ -41,16 +56,37 @@ endif
 endif
 
 install-exec-local: Simias.exe $(DATA_FILES)
-	$(mkinstalldirs) $(DESTDIR)$(webbindir)
+	$(mkinstalldirs) $(DESTDIR)$(webbindir) $(DESTDIR)$(bindir)
 	$(INSTALL_PROGRAM) Simias.exe $(DEBUG_FILES) $(DESTDIR)$(webbindir)
+if WINDOWS
+	$(INSTALL_PROGRAM) $(MONO_WEBSERVER_PATH)/Mono.Security.dll $(DESTDIR)$(webbindir)
+	$(INSTALL_PROGRAM) simias.cmd $(DESTDIR)$(bindir)
+else
+	$(INSTALL_PROGRAM) simias $(DESTDIR)$(bindir)
+endif
+
+if !GACD_MONO_WEBSERVER
+	$(INSTALL_PROGRAM) $(MONO_WEBSERVER_PATH)/Mono.WebServer.dll $(DESTDIR)$(webbindir)
+endif
 
 	
 uninstall-local:
 	cd $(DESTDIR)$(webbindir); rm -f Simias.exe $(DEBUG_FILES)
+if WINDOWS
+	cd $(DESTDIR)$(webbindir); rm -f Mono.Security.dll $(DEBUG_FILES)
+	cd $(DESTDIR)$(bindir); rm -f simias.cmd
+else
+	cd $(DESTDIR)$(bindir); rm -f simias
+endif
+
+if !GACD_MONO_WEBSERVER
+	cd $(DESTDIR)$(webbindir); rm -f Mono.WebServer.dll $(DEBUG_FILES)
+endif
+
 
 installcheck-local: install
 	
-CLEAN_FILES = Simias.exe $(DOC_FILE_CLEAN)
+CLEAN_FILES = Simias.exe Mono.WebServer.dll Mono.Security.dll $(DOC_FILE_CLEAN) AssemblyInfo.cs simias
 
 clean-local:
 	rm -rf $(CLEAN_FILES) $(COMMON_CLEAN_FILES)
@@ -60,5 +96,4 @@ distclean-local:
 
 maintainer-clean-local:
 	rm -rf $(COMMON_MAINTAINER_CLEAN_FILES)
-	rm -rf AssemblyInfo.cs
 
