--- a/simias/configure.in
+++ b/simias/configure.in
@@ -624,6 +624,8 @@ src/core/Common/MyDns.cs
 src/core/Common/Simias.config
 src/core/Common/defaults.config
 src/core/Common/Simias.log4net
+src/core/DiscoveryWS/Makefile
+src/core/DiscoveryWS/AssemblyInfo.cs
 src/core/SimiasClient/Makefile
 src/core/SimiasClient/AssemblyInfo.cs
 src/core/SimiasClient/SimiasSetup.cs
