Adding DiscoveryWS to distdirs and subdirs
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/discovery@6588 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/core/Makefile.am
+++ b/simias/src/core/Makefile.am
@@ -1,18 +1,18 @@
-DIST_SUBDIRS = SimiasClient SimiasLib.dll FlaimProvider WebService SyncService POBoxWS SimiasApp libsimias
+DIST_SUBDIRS = SimiasClient SimiasLib.dll FlaimProvider WebService SyncService POBoxWS SimiasApp libsimias DiscoveryWS
 
 if DARWIN
 SUBDIRS = SimiasClient SimiasLib.dll FlaimProvider WebService SyncService POBoxWS SimiasApp libsimias
 endif
 
 if LINUX
-SUBDIRS = SimiasClient SimiasLib.dll FlaimProvider WebService SyncService POBoxWS SimiasApp libsimias
+SUBDIRS = SimiasClient SimiasLib.dll FlaimProvider WebService SyncService POBoxWS SimiasApp libsimias DiscoveryWS
 endif
 
 if WINDOWS
 SUBDIRS = SimiasClient SimiasLib.dll FlaimProvider WebService SyncService POBoxWS SimiasApp libsimias
 endif
 
-EXTRA_DIST = ifdata simias-snakeoil.keys SqliteProvider
+EXTRA_DIST = ifdata simias-snakeoil.keys 
 
 install-exec-local:
 	$(mkinstalldirs) $(DESTDIR)$(webbindir)
