commiting Russ's patch fixes for simias
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6597 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/core/SimiasApp/Makefile.am
+++ b/simias/src/core/SimiasApp/Makefile.am
@@ -7,7 +7,7 @@ else
 SYSTEM_INSTALLER_LIB =
 endif
 
-MONO_WEBSERVER_PATH = ../../external/Mono.WebServer
+MONO_WEBSERVER_PATH = ../../../external/Mono.WebServer
 
 Simias_CSFILES = $(srcdir)/AssemblyInfo.cs \
 		$(srcdir)/Simias.cs \
