Changes for DiscoveryFramework. Unstable!!
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/discovery@6603 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/core/DiscoveryWS/Makefile.am
+++ b/simias/src/core/DiscoveryWS/Makefile.am
@@ -7,7 +7,7 @@ DiscoveryWS_INCLUDES =
 DiscoveryWS_RESOURCES =
 DiscoveryWS_FLAGS = $(CSC_LIBFLAG)
 DiscoveryWS_LIBS = System.dll System.Data.dll $(SYSTEM_XML) System.Web.dll System.Web.Services.dll SimiasClient.dll SimiasLib.dll Simias.Server.dll
-DiscoveryWS_LIBPATH = ../SimiasClient ../SimiasLib.dll ../../webservices/
+DiscoveryWS_LIBPATH = ../SimiasClient ../SimiasLib.dll ../../webservices/ ../../server/Simias.Server/
 
 EXTRA_DIST = DiscoveryService.asmx $(DiscoveryWS_CSFILES) AssemblyInfo.cs.in
 
@@ -21,7 +21,7 @@ all: Simias.Discovery.Web.dll
 
 Simias.Discovery.Web.dll: $(DiscoveryWS_CSFILES) $(DiscoveryWS_RESOURCES)
 	$(CSC) /out:$@ $(CSCFLAGS) $(DiscoveryWS_FLAGS) $(SIMIAS_LIBS) $(DiscoveryWS_LIBS:%=/r:%) $(DiscoveryWS_LIBPATH:%=/lib:%) $(DiscoveryWS_RESOURCES:%=$(ICON_FLAG)%) $(DiscoveryWS_CSFILES_CSC) $(DOC_FILE_CMD)
-
+	
 if DEBUG
 if WINDOWS
 DEBUG_FILES = Simias.Discovery.Web.pdb
