--- a/simias/src/core/SimiasLib.dll/SimiasLib.conf
+++ b/simias/src/core/SimiasLib.dll/SimiasLib.conf
@@ -4,6 +4,7 @@
 	<Service name="Simias Interprocess Event Service" enabled="True" class="Simias.Event.IProcEventServer" />
     <Service name="Simias Notification Service" enabled="True" class="Simias.Storage.NotificationService" />
 	<Service name="Simias PO Service" enabled="True" class="Simias.POBox.POService" />
+	<Service name="Simias Discovery Service" enabled="True" class="Simias.Discovery.DiscService" />
 	<Service name="Simias Sync Client" enabled="True" class="Simias.Sync.SyncClient" />
 </ThreadServices>
 
