--- a/simias/configure.in
+++ b/simias/configure.in
@@ -226,7 +226,7 @@ case $SIMIAS_OS in
 		GSOAP_PATH="$TOOLDIR/gsoap/macosx-2.7"
 		#StoreProviderAssembly="SqliteProvider.dll"
 		#StoreProviderType="Simias.Storage.Provider.Sqlite.SqliteProvider"
-		mappingpath="${exec_prefix}/web/bin/Simias.exe"
+		mappingpath="${exec_prefix}lib/simias/web/bin/Simias.exe"
     ;;
     #
     # Linux-specific configuration
@@ -263,7 +263,7 @@ case $SIMIAS_OS in
 		StoreProviderAssembly="SimiasLib.dll"
 		StoreProviderType="Simias.Storage.Provider.Flaim.FlaimProvider"
 		GSOAP_PATH="$TOOLDIR/gsoap/linux-2.7"
-		mappingpath="${exec_prefix}/web/bin/Simias.exe"
+		mappingpath="${exec_prefix}lib/simias/web/bin/Simias.exe"
     ;;
     #
     # Windows-specific configuration
