Added code to copy Mono.Security.dll and Mono.Server.dll to the Web/bin directory for windows.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6621 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/core/WebService/Makefile.am
+++ b/simias/src/core/WebService/Makefile.am
@@ -8,7 +8,7 @@ SimiasWebService_RESOURCES =
 SimiasWebService_FLAGS = $(CSC_LIBFLAG)
 SimiasWebService_LIBS = System.dll System.Data.dll $(SYSTEM_XML) System.Web.dll System.Web.Services.dll SimiasClient.dll SimiasLib.dll
 SimiasWebService_LIBPATH = ../SimiasClient ../SimiasLib.dll $(NOVELL_SECURITY_DIR)
-
+WebServerDir = ../../../external/Mono.WebServer/
 EXTRA_DIST = win.web.config mono.web.config Global.asax Simias.asmx Simias.wsdl $(SimiasWebService_CSFILES) AssemblyInfo.cs.in
 
 if MAKE_DOC_FILE
@@ -35,6 +35,7 @@ install-exec-local: Simias.Web.dll $(DATA_FILES)
 	$(INSTALL_PROGRAM) Simias.Web.dll $(DEBUG_FILES) $(DESTDIR)$(webbindir)
 if WINDOWS
 	$(INSTALL_PROGRAM) win.web.config $(DESTDIR)$(webdir)/web.config
+	$(INSTALL_PROGRAM) $(WebServerDir)Mono.WebServer.dll $(WebServerDir)Mono.Security.dll $(DESTDIR)$(webbindir)
 else
 	$(INSTALL_PROGRAM) mono.web.config $(DESTDIR)$(webdir)/web.config
 endif	
