Changes made to Makefile.am to include correct file and directory names.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6623 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/Makefile.am
+++ b/simias/src/Makefile.am
@@ -1,4 +1,3 @@
-DIST_SUBDIRS = core client server webservices webaccess admin setup
 
 if SIMIAS_AS_CLIENT
 SUBDIRS = core client
@@ -6,6 +5,7 @@ else
 SUBDIRS = core server webservices webaccess admin setup utils
 endif
 
+DIST_SUBDIRS = $(SUBDIRS)
 
 EXTRA_DIST = 
 
