--- a/simias/src/server/Makefile.am
+++ b/simias/src/server/Makefile.am
@@ -5,7 +5,7 @@ DIST_SUBDIRS = $(SUBDIRS) setup
 # handle Mono secondary dependencies
 export MONO_PATH := $(MONO_PATH):$(DESTDIR)$(libdir)
 
-EXTRA_DIST = Simias.config.in Simias.Server.conf simiasserver.in simiasserver.cmd.in 
+EXTRA_DIST = Simias.config.in Simias.Server.conf simias-server.in simias-server.cmd.in 
 
 if MAKE_DOC_FILE
 DOC_FILE = $(basename $@).doc.xml
