git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6624 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/Admin.csproj
+++ b/simias/src/admin/Admin.csproj
@@ -115,6 +115,18 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "EncryptionState.ascx"
+                    SubType = "UserControl"
+                    BuildAction = "Content"
+                />
+                <File
+                    RelPath = "EncryptionState.ascx.cs"
+                    DependentUpon = "EncryptionState.ascx"
+                    SubType = "ASPXCodeBehind"
+                    BuildAction = "Compile"
+                />
+
+                <File
                     RelPath = "AccountEnabled.ascx.resx"
                     DependentUpon = "AccountEnabled.ascx.cs"
                     BuildAction = "EmbeddedResource"
